--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <input type="text" />
+        <h4>Displaying <span> 0</span> / <span> 0</span> episodes</h4>
+      </header>
+    </div>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
