--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
+    <footer>Data has (originally) come from TVMaze.com</footer>
   </body>
 </html>
