--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div id="root">
       <header>
         <input type="text" />
-        <h4>Displaying <span> 0</span> / <span> 0</span> episodes</h4>
+        <h4>
+          Displaying <span id="search-result"> 0</span> /
+          <span id="total-episodes"> 0</span> episodes
+        </h4>
       </header>
     </div>
 
@@ -21,6 +24,9 @@
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
-    <footer>Data has (originally) come from TVMaze.com</footer>
+    <footer>
+      Data provided by
+      <a href="https://www.tvmaze.com/">tvmaze.com</a>
+    </footer>
   </body>
 </html>
