--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <body>
     <div id="root">
       <header>
+        <label for="episode-select">Choose episode:</label>
+
+        <select id="episode-select" onChange= "window.location.href=this.value"></select>
+          
+        </select>
         <input type="text" />
         <h4>
           Displaying <span id="search-result"> 0</span> /
