--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <header>
         <label for="episode-select">Choose episode:</label>
 
-        <select id="episode-select" onChange= "window.location.href=this.value"></select>
-          
+        <select id="episode-select" >
+          <option value=" select all">Select all episodes</option>
+        </select>
         </select>
         <input type="text" />
         <h4>
