--- a/index.html
+++ b/index.html
@@ -4,29 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TV Show Project | Daniel (DanGhanbari)</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
-    <div id="root">
-      <header>
-        <label for="episode-select">Choose episode:</label>
+      <div id="root">
+        <header class="d-flex align-items-center flex-column">
+          <label for="show-select">Choose show:</label>
+          <div class="col-4">
+            <select id="show-select" class="form-select form-select-lg mb-3" >
+              <option value="select all">Select a show</option>
+            </select>
 
-        <select id="episode-select" >
-          <option value=" select all">Select all episodes</option>
+          </div>
+          <label for="episode-select">Choose episode:</label>
+          <div class="col-4">
+            <select id="episode-select" class="form-select form-select-sm mb-3">
+              <option value="select all">Select all episodes</option>
+            </select>
+          </div>
         </select>
-        </select>
-        <input type="text" />
-        <h4>
-          Displaying <span id="search-result"> 0</span> /
-          <span id="total-episodes"> 0</span> episodes
-        </h4>
+        <div class="col-4">
+
+          <div class="input-group">
+            <span class="input-group-text mb-3 mt-3" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+  </svg></i></span>
+            <input class="form-control mb-3 mt-3" type="text" placeholder="search..."/>
+          </div>
+            <h4>
+              Displaying <span id="search-result"> 0</span> /
+              <span id="total-episodes"> 0</span> episodes
+            </h4>
+        </div>
       </header>
     </div>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
-    <!-- <script src="episodes.js"></script> -->
+    <script src="shows.js"></script>
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
