modified serarch box & added truncate function

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
             <h4>
               Displaying <span id="search-result"> 0</span> /
-              <span id="total-episodes"> 0</span> episodes
+              <span id="total-episodes"> 0</span> 
             </h4>
         </div>
       </header>
